--- a/my-singleton.html
+++ b/my-singleton.html
@@ -1,36 +1,42 @@
 <link rel="import" href="../polymer/polymer-element.html">
 
 <dom-module id="my-singleton">
-  <template>
-    <style>
-      :host {
-        display: block;
-      }
-    </style>
-    <h2>Hello [[prop1]]!</h2>
-  </template>
+    <template>
+        <style>
+            :host {
+                display: block;
+            }
+        </style>
+        <h2>Hello [[prop1]]!</h2>
+    </template>
 
-  <script>
-    /**
-     * `my-singleton`
-     * 
-     *
-     * @customElement
-     * @polymer
-     * @demo demo/index.html
-     */
-    class MySingleton extends Polymer.Element {
-      static get is() { return 'my-singleton'; }
-      static get properties() {
-        return {
-          prop1: {
-            type: String,
-            value: 'my-singleton'
-          }
-        };
-      }
-    }
+    <script>
+        /**
+         * `my-singleton`
+         *
+         *
+         * @customElement
+         * @polymer
+         * @demo demo/index.html
+         */
+        class MySingleton extends Polymer.Element {
+            static get is() {
+                return 'my-singleton';
+            }
 
-    window.customElements.define(MySingleton.is, MySingleton);
-  </script>
+            static get properties() {
+                return {
+                    property: {
+                        type: String
+                    },
+                    value: {
+                        notify: true
+                    }
+                };
+            }
+
+        }
+
+        window.customElements.define(MySingleton.is, MySingleton);
+    </script>
 </dom-module>
