--- a/demo/index.html
+++ b/demo/index.html
@@ -38,15 +38,15 @@
             String
             <paper-input value="{{string}}"></paper-input>
             <paper-input value="{{stringTest}}"></paper-input>
-            <my-singleton property="property3" value="{{string}}"></my-singleton>
-            <my-singleton property="property3" value="{{stringTest}}"></my-singleton>
+            <my-singleton property="string" value="{{string}}"></my-singleton>
+            <my-singleton property="string" value="{{stringTest}}"></my-singleton>
         </div>
         <div>
             Object
             <paper-input value="{{object.value}}"></paper-input>
             <paper-input value="{{objectTest.value}}"></paper-input>
-            <my-singleton id="object" property="property4" value="{{object}}"></my-singleton>
-            <my-singleton id="objectTest" property="property4" value="{{objectTest}}"></my-singleton>
+            <my-singleton id="object" property="object" value="{{object}}"></my-singleton>
+            <my-singleton id="objectTest" property="object" value="{{objectTest}}"></my-singleton>
             <!--<app-localstorage-document key="object" data="{{object}}"></app-localstorage-document>-->
         </div>z
     </template>
