--- a/my-singleton.html
+++ b/my-singleton.html
@@ -27,10 +27,10 @@
                             type: String
                         },
                         value: {
-                            type: Object,
+                            //type: Object,
                             notify: true
                         }
-                    };
+                    }
                 }
 
                 static get observers() {
