--- a/test/my-singleton_test.html
+++ b/test/my-singleton_test.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
@@ -9,44 +9,56 @@
     <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../../web-component-tester/browser.js"></script>
 
+    <link rel="import" href="../../paper-input/paper-input.html">
     <link rel="import" href="../my-singleton.html">
-  </head>
-  <body>
-
-    <test-fixture id="BasicTestFixture">
-      <template>
-        <my-singleton></my-singleton>
-      </template>
-    </test-fixture>
-
-    <test-fixture id="ChangedPropertyTestFixture">
-      <template>
-        <my-singleton prop1="new-prop1"></my-singleton>
-      </template>
-    </test-fixture>
-
-    <script>
-      suite('my-singleton', () => {
-
-        test('instantiating the element with default properties works', () => {
-          const element = fixture('BasicTestFixture');
-          assert.equal(element.prop1, 'my-singleton');
-          const elementShadowRoot = element.shadowRoot;
-          const elementHeader = elementShadowRoot.querySelector('h2');
-          assert.equal(elementHeader.innerHTML, 'Hello my-singleton!');
+</head>
+<body>
+<dom-bind>
+    <template>
+        <my-singleton id="test" property="test" value="test"></my-singleton>
+        <my-singleton id="test-two" property="test" value="test2"></my-singleton>
+        <my-singleton id="string" property="string" value="test"></my-singleton>
+        <my-singleton id="stringTwo" property="string"></my-singleton>
+        <my-singleton id="object" property="object" value='{"prop": "test"}'></my-singleton>
+        <my-singleton id="objectTwo" property="object"></my-singleton>
+        <my-singleton id="array" property="object"></my-singleton>
+        <my-singleton id="arrayTwo" property="object"></my-singleton>
+    </template>
+</dom-bind>
+<script>
+    suite('my-singleton', () => {
+        test('Test overwrite', () => {
+            const element = document.getElementById("test-two");
+            assert.equal(element.value, 'test');
         });
 
-        test('setting a property on the element works', () => {
-          // Create a test fixture
-          const element = fixture('ChangedPropertyTestFixture');
-          assert.equal(element.prop1, 'new-prop1');
-          const elementShadowRoot = element.shadowRoot;
-          const elementHeader = elementShadowRoot.querySelector('h2');
-          assert.equal(elementHeader.innerHTML, 'Hello new-prop1!');
+        test('Test string', () => {
+            const element = document.getElementById("stringTwo");
+            assert.equal(element.value, 'test');
         });
 
-      });
-    </script>
+        test('Change object', () => {
+            const element1 = document.getElementById("object");
+            const element2 = document.getElementById("objectTwo");
+            element1.value = {};
+            element1.value.prop = "test";
+            assert.equal(element2.value.prop, 'test');
+            element2.value.prop = "test2";
+            assert.equal(element1.value.prop, 'test2');
+        });
 
-  </body>
+        test('Change array', () => {
+            const element1 = document.getElementById("array");
+            const element2 = document.getElementById("arrayTwo");
+            element1.value = [];
+            element1.value[0] = "test";
+            assert.equal(element2.value[0], 'test');
+            element2.value[0] = "test2";
+            assert.equal(element1.value[0], 'test2');
+        });
+
+    });
+</script>
+
+</body>
 </html>
